--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -41,6 +41,8 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - name: Enable pnpm
+        run: corepack enable
       - name: Install dependencies
         run: pnpm install
         working-directory: ${{ env.BUILD_PATH }}
