--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -49,8 +49,10 @@ jobs:
         run: pnpm install --frozen-lockfile
         working-directory: ${{ env.BUILD_PATH }}
 
-      - name: Build with Astro
+      - name: check
         run: echo ${{ toJson(vars) }}
+
+      - name: Build with Astro
         run: |
           pnpm build \
             --site "${{ steps.pages.outputs.origin }}" \
