--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -60,7 +60,7 @@ jobs:
         env:
           PUBLIC_ENV_VARIABLE: ${{ vars.PUBLIC_ENV_VARIABLE }}
 
-      - name: Upload build
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: build-${{github.ref_name}}-${{github.sha}}
@@ -69,19 +69,18 @@ jobs:
           retention-days: 1
 
   deploy:
-    environment:
-      name: github-pages
-      # url: ${{ steps.deployment.outputs.page_url }}
+    environment: github-pages
     needs: build
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-      - uses: actions/download-artifact@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
           name: build-${{github.ref_name}}-${{github.sha}}
           path: dist
 
-      - name: rsync deployments
+      - name: Deploy with Rsync
         uses: burnett01/rsync-deployments@7.0.1
         with:
           switches: -avzr --delete
