--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -32,6 +32,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Says hello compositely
+        id: hello-composite
+        uses: ./.github/actions/hello-composite
+        with:
+          who-to-greet: "Gamba"
+
+      - name: Gets random number
+        run: echo "Random number is ${{steps.hello-composite.outputs.random-number}}"
+
       - name: Says hello in Typescript
         id: hello-ts
         uses: Serpentarius13/ts-action@v0.0.1
