--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -23,6 +23,11 @@ env:
   # BUILD_PATH: subfolder
 
 jobs:
+  reuse:
+    uses: ./.github/workflows/reusable.yml
+    with:
+      whom-to-greet: "The Flow of the World"
+
   build:
     environment:
       name: github-pages
@@ -31,11 +36,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Reuses workflow
-        uses: ./.github/workflows/reusable.yml
-        with:
-          whom-to-greet: "The Flow of the World"
 
       - name: Says hello compositely
         id: hello-composite
