--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -12,6 +12,9 @@ jobs:
   prepare_matrix:
     runs-on: ubuntu-latest
 
+    outputs:
+      output1: ${{ steps.colors.outputs.colors }}
+
     steps:
       - name: Define Colors
         id: colors
